compiler/testData/diagnostics/tests/secondaryConstructors/thisNonExisting.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER
class A {
    constructor(x: Int) {}
    constructor(x: String) {}
    constructor(): <!NONE_APPLICABLE!>this<!>('a') {}
}
